# ComfyUI-VoxCPM2

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  voxcpm2_nodes.py  voxcpm2_train_nodes.py
docs/: README_zh.md  readme-lora-training.md  voxcpm2-prompts-and-styles.md
example_workflows/: VoxCPM2-example.json
modules/: dataset_utils.py  loader.py  model_info.py  patcher.py  trainer.py
src/voxcpm/: core.py  zipenhancer.py
src/voxcpm/model/: voxcpm.py  voxcpm2.py
src/voxcpm/modules/audiovae/: audio_vae.py  audio_vae_v2.py
src/voxcpm/modules/locdit/: local_dit_v2.py  unified_cfm.py
src/voxcpm/modules/minicpm4/: config.py  model.py
src/voxcpm/training/: accelerator.py
